--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,7 +202,14 @@ select.form-control:not([size]):not([multiple]) {
     background-image: url("../img/mastercard.png"); }
   .form-control.creditcard.visa {
     background-image: url("../img/visa.png"); }
-
+    .nav-link-color
+    {
+      color:  #6777ef!important;
+    }
+    .nav-link-color:hover
+    {
+      color:  #0e1968!important;
+    }
 .form-group {
   margin-bottom: 25px; }
   .form-group .control-label,
@@ -2811,5 +2818,75 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   100% {
     -webkit-transform: scale(1.2, 1.2);
     opacity: 0.0; } }
+      .tittle-login
+  {
+    color: #fff;font-weight: normal; font-size: 18px;
+    text-align: center;
+  }
+
+  .login-img
+  {
+    background: linear-gradient(0deg, rgba(221, 152, 152, 0), rgba(255,255,255,5.7875525210084033))100%, url('../img/diverse-people-working-in-the-office.jpg');
+     background-repeat: no-repeat; 
+     background-size: cover;
+  }
+  .login-card
+  {
+      min-height: 230px;
+      background-position: center center;
+      background-repeat: no-repeat;
+    /* Fijamos la imagen a la ventana para que no supere el alto de la ventana */
+      /* El fonde se re-escala automáticamente */
+      background-size: cover;
+      background-image: url(../img/2852869.png);
+      border: 0px;
+      padding:40px;
+      padding-bottom: 10px;
+      text-align: left;
+  }
+  
+  .btn-login
+  {
+    background: linear-gradient(90deg, rgba(30, 25, 86, 0.88) 0%, #1E1956 100%);
+  border-radius: 5px;
+  color: #fff
+  }
+  .input-login{
+    background: linear-gradient(90deg, rgba(25, 70, 131, 0.88) 0%, #2F80ED 50%, #2D9EE0 100%);
+    color: #fff!important;
+  }
+  input::placeholder
+  {
+  border-radius: 5px;
+  color: #fff!important;
+  max-height: 30px;
+  font-size: 14px
+  
+  }
+  .card-body
+  {
+  border-radius: 0px!important;
+  padding-left: 40px;
+  padding-right: 40px!important;
+}
+  .form-group
+  {
+    margin-top: 0px;
+    padding-top: 0px;
+    
+  }
+  .tittle-sesion
+  {
+      color:#227cbb;
+      margin-bottom: 10px;
+      text-align: center;
+  }
+  .shadow
+  {
+    border-radius: 0px;
+    box-shadow: 0px 15px 40px 30px rgba(0, 0, 0, 0.25);
+
+  }
+
 
 /*# sourceMappingURL=style.css.map */
