--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -26,7 +26,7 @@
 .nav-arrows a {
 	width: 42px;
 	height: 42px;
-	background: #7b7dff9f url(../images/nav.png) no-repeat top left;
+	background: rgb(255, 255, 255) url(../images/nav.png) no-repeat top left;
 	position: absolute;
 	top: 40%;
 	left: 12px;
@@ -36,12 +36,14 @@
 	margin-top: -21px;
 	opacity: 0.9;
 	border-radius: 50%;
-	box-shadow: 0 1px 1px rgba(255,255,255,0.8);
+	-webkit-box-shadow: 0px 10px 28px -5px rgb(97, 124, 152);
+-moz-box-shadow: 0px 10px 28px -5px rgb(81, 109, 138);
+box-shadow: 0px 10px 28px -5px rgb(82, 104, 128);
 }
 
 .nav-arrows a:first-child{
 	left: auto;
-	right: 2px;
+	/* right: 2px; */
 	background-position: top right;
 }
 
